<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_recipes"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/recipes_title"
            />
        <item
            android:id="@+id/menu_ingredients"
            android:icon="@drawable/ic_label_black_24dp"
            android:title="@string/ingredients_title"
            />
        <item
            android:id="@+id/menu_pantry"
            android:icon="@drawable/ic_kitchen_black_24dp"
            android:title="@string/pantry_title"
            />
        <item
            android:id="@+id/menu_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/shopping_list_title"
            />
    </group>
</menu>