<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/recipeWithIngredientsFragment">

    <fragment
        android:id="@+id/recipeWithIngredientsFragment"
        android:name="org.omgcobra.matchthese.fragments.recipe.RecipeWithIngredientsFragment"
        android:label="@string/recipes_title"
        tools:layout="@layout/fragment_recipes_view" >
        <action
            android:id="@+id/edit_recipe"
            app:destination="@id/recipeEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/ingredientWithRecipesFragment"
        android:name="org.omgcobra.matchthese.fragments.ingredient.IngredientWithRecipesFragment"
        android:label="@string/ingredients_title"
        tools:layout="@layout/fragment_ingredients_view">
        <action
            android:id="@+id/edit_ingredient"
            app:destination="@id/ingredientEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeEditFragment"
        android:name="org.omgcobra.matchthese.fragments.recipe.RecipeEditFragment"
        android:label="@string/recipe_edit_title" />
    <fragment
        android:id="@+id/ingredientEditFragment"
        android:name="org.omgcobra.matchthese.fragments.ingredient.IngredientEditFragment"
        android:label="@string/ingredient_edit_title" />
</navigation>